# project-chimera

./: .coverage  .env  .gitignore  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Makefile  README.md  SOUL.md  pyproject.toml
.github/workflows/: main.yml
backend/: app.py
chimera/: __init__.py  errors.py  gateway.py  judge.py  registry.py  run_demo.py  wallet.py
docs/: acceptance_criteria.json  acceptance_criteria.md  mcp_config.md  mcp_sense_connection_log.md  report_feb4.md
docs/adr/: ADR-0001-spec-driven-development.md  ADR-0002-openclaw-gateway.md  ADR-0003-occ-versioning.md  ADR-0004-mcp-tools.md
frontend/: app.js  index.html  styles.css
ide-chat-history/: 2026-02-05-session.md  2026-02-06-session.md  ide-chat-history.md
research/: architecture_strategy.md  reading_notes.md
scripts/: serve_ui_secure.py
skills/image_generator/: README.md
skills/trend_hunter/: README.md
skills/wallet_manager/: README.md
specs/: _meta.md  functional.md  technical.md
tests/: test_judge_logic.py  test_occ_consistency.py  test_routing_dispatch.py
