[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Factory - Spec-driven environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Azazh Wuletawu" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
